--- a/support_files/port.css
+++ b/support_files/port.css
@@ -22,7 +22,7 @@
 
 .row {
       padding: 30px;
-      border: 1px solid #fff;
+      /*border: 1px solid #fff;*/
     }
 .row{
       margin: 100px auto;
@@ -30,9 +30,22 @@
 
 .item1 {
     font-size: 4vw;
+    margin-top: 300px;
+      padding-right: 450px;
+      float:left;
     /*justify-self: left;*/
 }
-
+.item2 {
+    font-size: 4vw;
+    margin-top: 400px;
+      padding-right: 240px;
+    /*justify-self: left;*/
+}
+.item3 {
+    font-size: 4vw;
+      padding-right: 50px;
+    /*justify-self: left;*/
+}
 
 #hero {
     background: url(images/hero_mountian.jpg);
@@ -72,7 +85,6 @@
   	display: flex;
   	justify-content: left;
   	align-items: center;
-    padding-right: 440px;
   }
 
 .sub-title {
