forgot to change hero img for small screens

--- a/support_files/port.css
+++ b/support_files/port.css
@@ -68,7 +68,7 @@ a {
 }
 
 .ero-after {
-    background: url(images/hero_mountian.jpg);
+    background: url(images/hero5.jpg);
     background-size: cover, cover;
     background-position: center, center;
     min-height: 1000px;
