--- a/support_files/port.css
+++ b/support_files/port.css
@@ -17,6 +17,7 @@
     font-size: 150%;
     grid-template-rows: repeat(auto-fill, minmax(3220000%, 1fr));
 }
+
 h2,
 h3,
 h4,
@@ -26,6 +27,31 @@ p,
 a {
   font-family: 'Sorts Mill Goudy', serif;
 }
+/* Hover Links
+a {
+	color: red;
+  line-height:1.5;
+  text-decoration:none;
+  position: relative;
+}
+
+a:after{
+	content: "";
+  width: 0;
+  position: absolute;
+  left: 0;
+  top: 100%;
+	border-top:.05em solid currentColor;
+  transition: all .5s cubic-bezier(0.390, 0.575, 0.565, 1.000);
+}
+
+
+a:hover:after{
+	width:100%;
+}
+*/
+/* /Hover Links*/
+
 .section {
   padding-top: 4vw;
   padding-bottom: 4vw;
@@ -319,6 +345,113 @@ a {
 /* ./Media queries */
 
 /* /NAVBAR */
+/* Image Hover*/
+figure.snip1091 {
+  font-family: 'Raleway', Arial, sans-serif;
+  position: relative;
+  display: inline-block;
+  margin: 10px 5px;
+  min-width: 220px;
+  max-width: 310px;
+  max-height: 310px;
+  width: 100%;
+  overflow: hidden;
+  text-align: center;
+  background: #000000;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+}
+
+figure.snip1091 * {
+  -webkit-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+
+figure.snip1091 img {
+  opacity: 0.25;
+  max-width: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
+figure.snip1091 figcaption {
+  position: absolute;
+  top: 50%;
+  left: 30px;
+  right: 30px;
+  -webkit-transform: rotate(0deg) translateY(-50%) scale(1);
+  transform: rotate(0deg) translateY(-50%) scale(1);
+  -webkit-transform-origin: center 0;
+  transform-origin: center 0;
+}
+
+figure.snip1091 figcaption h5 {
+  top: 50%;
+  letter-spacing: -1px;
+  color: #ffffff;
+  text-transform: uppercase;
+  padding: 10px 0;
+  margin: 0;
+  font-weight: 400;
+}
+
+figure.snip1091 figcaption h5 span {
+  font-weight: 800;
+}
+
+figure.snip1091 figcaption:before,
+figure.snip1091 figcaption:after {
+  background-color: rgba(255, 255, 255, 0.8);
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  content: "";
+  display: block;
+  -webkit-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+
+figure.snip1091 figcaption:before {
+  left: 0;
+  top: 0;
+}
+
+figure.snip1091 figcaption:after {
+  bottom: 0;
+  right: 0;
+}
+
+figure.snip1091.navy {
+  background: #332f28;
+}
+
+figure.snip1091 a {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+}
+
+figure.snip1091:hover img,
+figure.snip1091.hover img {
+  opacity: 1;
+}
+
+figure.snip1091:hover figcaption,
+figure.snip1091.hover figcaption {
+  -webkit-transform: rotate(-45deg) translateY(-50%) scale(0.9);
+  transform: rotate(-45deg) translateY(-50%) scale(0.9);
+}
+
+figure.snip1091:hover figcaption:before,
+figure.snip1091.hover figcaption:before,
+figure.snip1091:hover figcaption:after,
+figure.snip1091.hover figcaption:after {
+  width: 200%;
+}
+
+/* /Image Hover*/
 
 .link:hover {
   color: #ADB9D1;
