--- a/support_files/port.css
+++ b/support_files/port.css
@@ -359,6 +359,7 @@ figure.snip1091 {
   text-align: center;
   background: #000000;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  box-shadow: 5px 8px 18px #888888;
 }
 
 figure.snip1091 * {
