editing social colors

--- a/support_files/port.css
+++ b/support_files/port.css
@@ -604,9 +604,9 @@ figure.snip1091.hover figcaption:after {
   padding-left: 5%;
 }
 .social-bar > li > a {
-    color: #ADB9D1;
+    color: #DADADA;
     font-size: 300%;
 }
 .social-bar > li > a:hover {
-    color: #ADB9D1;
+    color: #4E4E4E;
 }
