moved icons to footer on med & sm screens

--- a/support_files/port.css
+++ b/support_files/port.css
@@ -592,3 +592,24 @@ figure.snip1091.hover figcaption:after {
     font-size: 5em;
     margin: 0.3em;
 }
+.btn:hover {
+  color: #ADB9D1;
+}
+.social-bar {
+  margin: 0;
+  line-height: 5px;
+  list-style: none;
+  color: black;
+}
+.social-bar > li {
+  color: black;
+  display: inline-block;
+  padding-left: 5%;
+}
+.social-bar > li > a {
+    color: #4E4E4E;
+    font-size: 150%;
+}
+.social-bar > li > a:hover {
+    color: #ADB9D1;
+}
