--- a/support_files/port.css
+++ b/support_files/port.css
@@ -49,6 +49,11 @@ a {
     top: 400px;
     background-color: #4E4E4E;
 }
+/* This needs fixed
+#home {
+  height: calc(100vh - 0px);
+}
+*/
 .section {
   padding-top: 4vw;
   padding-bottom: 4vw;
